# rules_js_examples

pnpm-workspaces/: NOTES.md  WORKSPACE.bazel  pnpm-workspace.yaml  tsconfig.json
pnpm-workspaces/apps/alpha/: BUILD.bazel
pnpm-workspaces/apps/alpha/src/: main.ts
pnpm-workspaces/issue706/clock/: BUILD.bazel  clock_generated.ts  package.json
