load("@aspect_rules_js//npm:defs.bzl", "npm_link_package", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        ":proj",
    ],
    package = "@myapp/clock",
    visibility = ["//visibility:public"],
)

npm_link_package(
    name = "node_modules/@myapp/clock",
    src = ":pkg",
    root_package = package_name(),
    visibility = ["//visibility:public"],
)

ts_project(
    name = "proj",
    srcs = ["clock_generated.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/star-wars-quotes",
    ],
)
